# AndroidFamilyDemo

./: LICENSE  README-CN.md  README.md  maven.gradle
AutoPacker/: build.gradle  gradle.properties  settings.gradle
AutoPacker/app/: build.gradle
HelloAndroidX/: build.gradle  gradle.properties  settings.gradle
HelloAndroidX/app/: build.gradle
HelloBuildVariant/: settings.gradle
HelloBuildVariant/app/: build.gradle  debug.keystore  release.keystore
HelloBuildVariant/lib/: build.gradle
HelloJni/: README.md  settings.gradle
HelloJni/app/: build.gradle
HelloLeakCanary/: settings.gradle
HelloLeakCanary/app/: build.gradle
HelloMQTT/: settings.gradle
HelloMQTT/sample/: build.gradle
HelloModular/: build.gradle  config.gradle  dependencies.gradle  generateReleaseManifest.gradle  gradle.properties  settings.gradle
HelloModular/app/: build.gradle
HelloModular/loginlib/: build.gradle
HelloNDK/: settings.gradle
HelloNDK/app/: build.gradle
HelloNDK/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  MediaPlayer.cpp  MediaPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  util.h
HelloNDK/app/src/main/cpp/ffmpeg/: CMakeLists.txt
HelloNDK/app/src/main/cpp/libsubc/: CMakeLists.txt  sub1.c  sub1.h
HelloNDK/app/src/main/cpp/libsubcpp/: CMakeLists.txt  sub2.cpp  sub2.h
HelloNDK/gcc_demo/: GCC 示例.md  main.c  mainARM64
HelloTransform/: build.gradle  dependencies.gradle  gradle.properties  settings.gradle
HelloTransform/lib/: build.gradle
HelloTransform/sample/: build.gradle
KotlinDegelate/: settings.gradle
KotlinDegelate/app/: build.gradle
KotlinDelegate/: README-CN.md  README.md  build.gradle  settings.gradle
KotlinDelegate/app/: build.gradle
KotlinDelegate/ktx/: build.gradle  gradle.properties
KotlinDelegate/sample/: build.gradle
MavenPublish/: build.gradle  gradle.properties  maven.gradle  settings.gradle
MavenPublish/aarlib/: build.gradle
MavenPublish/aarlib2/: build.gradle
MavenPublish/aarpacker/: build.gradle
RaceRequestDemo/: build.gradle  config.gradle  dependencies.gradle  settings.gradle
(+260 files in other folders)
